--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,36 @@
 <html>
 <head>
 	<title>Off the backbone</title>
-
+    <script>
+        var NEWSLETTER = (function () {
+            return {
+                message: 'Thank You. We will contact you soon',
+                button: 'Start Now'
+            };
+        }());
+//        var NEWSLETTER =  {
+//                message: 'Thank You. We will contact you soon',
+//                button: 'Start Now'
+//            };
+    </script>
 	<script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="js/lib/underscore-min.js"></script>
 	<script type="text/javascript" src="js/lib/backbone-min.js"></script>
 	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/handlebars.runtime.js"></script>
 
-    <script type="text/javascript" src="templates/templates.js"></script>
-    <script type="text/javascript" src="js/models/newsletter_model.js"></script>
-    <script type="text/javascript" src="js/views/newsletter_form_view.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <!--<script type="text/javascript" src="templates/templates.js"></script>-->
+    <!--<script type="text/javascript" src="js/models/newsletter_model.js"></script>-->
+    <!--<script type="text/javascript" src="js/views/newsletter_form_view.js"></script>-->
+    <!--<script type="text/javascript" src="js/app.js"></script>-->
 
-    <!--<script type="text/javascript" src="build/newsletter-0.0.2.min.js"></script>-->
+    <script type="text/javascript" src="build/newsletter-0.0.3.min.js"></script>
+    <!--<script type="text/javascript" src="build/newsletter-minified.js"></script>-->
+    <!--<script type="text/javascript" src="build/newsletter-jqueryWraped.js"></script>-->
+    <!--<script type="text/javascript" src="build/newsletter-src.js"></script>-->
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
 
 
